--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-.header {
+.header {
   background-color: transparent;
 }
 
 .content-wrapper {
-  padding: 1rem 10rem;
-  background: #FFFFFF;
+  background-color: whitesmoke;
+  padding: 5rem 10rem;
   border-radius: 1.5rem;
 }
 
@@ -33,7 +33,8 @@
 /* Bereits vorhandene Stile bleiben unverändert */
 .avatarLink .ant-avatar {
   overflow: hidden;
-  transition: transform 0.3s ease; /* Box-shadow-Transition entfernt */
+  transition: transform 0.3s ease;
+  /* Box-shadow-Transition entfernt */
 }
 
 /* Neuer Glanz-Effekt */
