--- a/src/Routes/styles/Home.css
+++ b/src/Routes/styles/Home.css
@@ -1,7 +1,7 @@
 /* Dashboard.css */
 
 * {
-  font-family: 'Work Sans', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .dashboard-container {
