--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,30 @@
+body{
+  background-color: whitesmoke;
+}
+
 .header {
-  background-color: transparent;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+.header__search {
+  flex: 0.5;
+}
+
+.header__menu {
+  flex: 1;
+  justify-content: flex-end;
 }
 
 .content-wrapper {
-  background-color: whitesmoke;
   padding: 5rem 10rem;
   border-radius: 1.5rem;
 }
