--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,49 @@
-body{
+body {
   background-color: whitesmoke;
 }
 
-.header {
-  background-color: white;
+.navbar-header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
-  width: 100%;
+  right: 0;
+  z-index: 1000;
+  width: 90%;
+  max-width: 80rem;
+  background-color: rgba(255, 255, 255, 0.75);
+  backdrop-filter: blur(6px);
+  box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.06);
+  padding: 0 1.5rem;
   display: flex;
   align-items: center;
-  gap: 2.5rem;
-  border-bottom: 1px solid #f0f0f0;
+  justify-content: space-between;
+  height: 4rem;
+  border-radius: 8px;
+  border: 1px solid #f0f0f0;
+  margin: .5rem auto;
 }
 
-.header__search {
-  flex: 0.5;
+.navbar-logo {
+  width: 2rem;
+  height: 2rem;
 }
 
-.header__menu {
-  flex: 1;
-  justify-content: flex-end;
+.navbar-title {
+  font-weight: 600;
+  font-size: 1.125rem;
+}
+
+.navbar-search {
+  width: auto;
+  max-width: 18.75rem;
+  margin: 0 3rem;
+}
+
+.navbar-menu {
+  border: none;
+  min-width: 25rem;
+  background-color: transparent;
+  font-weight: 500;
 }
 
 .content-wrapper {
@@ -34,7 +56,6 @@ body{
     padding: 1rem;
   }
 }
-
 
 .card-3d {
   transition: transform 0.2s ease-out, box-shadow 0.3s ease;
@@ -102,7 +123,7 @@ body{
   flex: 1;
 }
 
-.quick-actions-section .card .ant-card-head{
+.quick-actions-section .card .ant-card-head {
   border-bottom: 0;
 }
 
