--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: black;
 }
 
@@ -22,10 +22,11 @@ body{
 }
 
 .navbar-logo {
-  width: 2.5rem;
-  height: 2.5rem;
+  z-index: 10;
+  width: 7.5rem;
+  filter: invert(100%);
+  mix-blend-mode: difference;
 }
-
 .navbar-title {
   font-weight: 600;
   font-size: 1.125rem;
@@ -155,6 +156,7 @@ body{
   width: 300px;
   height: 400px;
 }
+
 /* Bereits vorhandene Stile bleiben unverändert */
 .avatarLink .ant-avatar {
   overflow: hidden;
@@ -184,7 +186,7 @@ body{
 /* Dashboard.css */
 
 * {
-  font-family: "JetBrains Mono", monospace !important;
+  font-family: "IBM Plex Mono", monospace !important;
   font-optical-sizing: auto;
 }
 
@@ -237,14 +239,6 @@ body{
 .activity-details {
   flex: 1;
   margin-left: 16px;
-}
-
-.activity-amount.positive {
-  /* color removed - will use Ant Design's success color */
-}
-
-.activity-amount.negative {
-  /* color removed - will use Ant Design's error color */
 }
 
 /* Card Details Page Styles */
@@ -349,4 +343,97 @@ body{
 
 .ant-input-prefix .anticon {
   color: white !important;
+}
+
+h1.ant-typography {
+  text-transform: uppercase;
+}
+
+h2.ant-typography {
+  text-transform: uppercase;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.45);
+}
+
+h3.ant-typography,
+h4.ant-typography,
+h5.ant-typography {
+  text-transform: uppercase;
+  margin-block: 0rem 0.5rem;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.45);
+}
+
+/* Hover-Effekt für Listenelemente */
+.info-list-item {
+  transition: background-color 0.2s ease;
+}
+
+.info-list-item:hover {
+  background-color: #f5f5f5; /* Subtiles Hellgrau für Hover */
+}
+
+/* Hover-Effekt für den Löschen-Button */
+.delete-button {
+  transition: color 0.2s ease;
+}
+
+.delete-button:hover {
+  color: #ff4d4f; /* Rot, um die Löschaktion hervorzuheben */
+}
+
+/* Animation für das Hinzufügen von Elementen */
+.item-enter {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.item-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 300ms ease, transform 300ms ease;
+}
+
+/* Animation für das Entfernen von Elementen */
+.item-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.item-exit-active {
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 300ms ease, transform 300ms ease;
+}
+
+.typewriter {
+  position: relative;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.cursor {
+  display: inline-block;
+  width: 2px;
+  height: 1em;
+  background-color: black;
+  margin-left: 2px;
+  animation: blink 1s step-end infinite;
+  vertical-align: text-bottom;
+}
+
+.char-fade-in {
+  display: inline-block;
+  animation: fadeIn 0.3s ease-in-out forwards;
+  opacity: 0;
+}
+
+@keyframes blink {
+  from, to { opacity: 1; }
+  50% { opacity: 0; }
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
